<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddNoteActivity"
    >

  <com.google.android.material.appbar.AppBarLayout
      android:id="@+id/appBar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:theme="@style/AppTheme.AppBarOverlay"
      >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/addNoteActivityToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:contentInsetStartWithNavigation="0dp"
        >
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/add_note"
          android:textColor="@android:color/white"
          android:textSize="@dimen/text_size_20"
          />
    </androidx.appcompat.widget.Toolbar>

  </com.google.android.material.appbar.AppBarLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="@dimen/dimen_16"
      android:layout_marginRight="@dimen/dimen_16"
      android:layout_marginTop="@dimen/dimen_16"
      android:orientation="vertical"
      app:layout_behavior="@string/appbar_scrolling_view_behavior"
      >
    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_16"
        android:hint="Title..."
        android:inputType="textCapWords"
        android:textColor="@color/colorPrimaryText"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/etNoteText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/dimen_8"
          android:background="@drawable/note_input_background"
          android:gravity="top"
          android:hint="Note..."
          android:inputType="textMultiLine|textCapSentences"
          android:lines="6"
          android:padding="@dimen/dimen_4"
          android:textColor="@color/colorPrimaryText"
          />

    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_16"
        >
      <TextView
          android:id="@+id/tvAddPhoto"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentLeft="true"
          android:drawableLeft="@drawable/ic_add_a_photo_blue_24dp"
          android:drawablePadding="@dimen/dimen_4"
          android:gravity="center_vertical"
          android:text="@string/add_a_photo"
          android:textColor="@color/colorPrimaryText"
          />

      <TextView
          android:id="@+id/tvAddVoiceNote"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentRight="true"
          android:drawableLeft="@drawable/ic_keyboard_voice_blue_24dp"
          android:drawablePadding="@dimen/dimen_4"
          android:gravity="center_vertical"
          android:text="@string/add_voice_note"
          android:textColor="@color/colorPrimaryText"
          />
    </RelativeLayout>

    <ImageView
        android:id="@+id/imgBitmap"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/btnSaveNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_32"
        android:background="@drawable/button_blue_background"
        android:text="@string/save"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_18"
        />
  </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>