<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        tools:context="io.github.owuor91.kotnots.activities.ViewNoteActivity"
>

    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
    >

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:contentInsetStartWithNavigation="0dp"
        >
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/view_note"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size_20"
            />
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >

        <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
        >

            <ImageView
                    android:id="@+id/imgNote"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginBottom="@dimen/dimen_8"
                    android:scaleType="fitXY"
                    android:src="@drawable/placeholder_img"
            />

            <TextView
                    android:id="@+id/tvNoteTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#90000000"
                    android:padding="4dp"
                    android:text="Tempor incididunt ut labore"
                    android:textColor="#fff"
                    android:textSize="@dimen/text_size_20"
            />

        </FrameLayout>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="4dp"
                android:paddingLeft="@dimen/dimen_16"
                android:paddingRight="@dimen/dimen_16"
                android:paddingTop="8dp"
        >

            <TextView
                    android:id="@+id/tvNoteText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_8"
                    android:text="Lorem ipsum dx"
            />

            <TextView
                    android:id="@+id/tvGpsTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_4"
                    android:text="Note Taken From"
                    android:textStyle="bold"
            />

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_24"
            >
                <ImageView
                        android:id="@+id/imgGpsIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/dimen_8"
                        app:srcCompat="@drawable/ic_my_location_black_48dp"
                />

                <TextView
                        android:id="@+id/tvLongitude"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dimen_8"
                        android:layout_toRightOf="@+id/imgGpsIcon"
                        android:text="Longitude: 45.7838624"
                />

                <TextView
                        android:id="@+id/tvLatitude"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvLongitude"
                        android:layout_toRightOf="@+id/imgGpsIcon"
                        android:text="Latitude: -1.4738383"
                />
            </RelativeLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
            >

                <ImageView
                        android:id="@+id/imgPlay"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        app:srcCompat="@drawable/ic_play_circle_outline_blue_48dp"
                />

                <SeekBar
                        android:id="@+id/seekBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                />

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:orientation="horizontal"
            >
                <View
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                />

                <TextView
                        android:id="@+id/tvNoteItemEdit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/dimen_24"
                        android:drawableLeft="@drawable/ic_mode_edit_blue_24dp"
                        android:gravity="center_vertical"
                        android:text="@string/edit"
                />

                <TextView
                        android:id="@+id/tvNoteItemDelete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_delete_forever_blue_24dp"
                        android:gravity="center_vertical"
                        android:text="@string/delete"
                />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
